--- a/app/views/sampling/samplingReceptionManage.html
+++ b/app/views/sampling/samplingReceptionManage.html
@@ -1,7 +1,7 @@
 <div class="animated bounceInRight">
     <div class="card">
         <div class="card-header">
-            <h2>Muestreos</h2>
+            <h2>Muestreos (Recepciones)</h2>
         </div>
         <div class="col-sm-12 actionbar">
             <div class="form-group">
