--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -6,15 +6,10 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
-                    <label for="producers" class="col-sm-2 control-label">Productores</label>
+                    <label for="prodF" class="col-sm-2 control-label">Productores</label>
                     <div class="col-sm-10">
-                        <div class="fg-line disabled">
-                            <div class="fg-line select">
-                                <!--<select class="form-control" ng-init="grill.Producer = producers[0]" ng-model="grill.Producer">
-                                    <option ng-repeat="producer in producers" ng-selected="grill.Producer == producer.ProducerName" value="{{producer.ProducerName}}">{{producer.ProducerName}}</option>
-                                </select>-->
-                                <select class="form-control" ng-init="grill.Producer = producers[0]" ng-model="grill.Producer" ng-options="producer.ProducerName for producer in producers"></select>
-                            </div>
+                        <div class="fg-line select">
+                            <select id="prodF" class="form-control" ng-model="grill.Producer" ng-options="producer.ProducerName for producer in producers"></select>
                         </div>
                     </div>
                 </div>
@@ -42,11 +37,10 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="variety" class="col-sm-2 control-label">Variedad</label>
+                    <label for="varieF" class="col-sm-2 control-label">Variedades</label>
                     <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="variety" name="Variety" placeholder="variedad" data-ng-model="grill.Variety">
-                            <small class="help-block has-error" style="color:red" ng-show="!grillForm.$pristine && grillForm.Variety.$error.required">El Campo es requerido.</small>
+                        <div class="fg-line select">
+                            <select id="varieF" class="form-control" ng-model="grill.Variety" ng-options="variety.VarietyName for variety in varieties"></select>
                         </div>
                     </div>
                 </div>
@@ -87,7 +81,7 @@
                 </div>
                 <div class="form-group marginTop">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveGrill()" ng-disabled="!grillForm.$valid">Guardar</button>
+                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveGrill(grill)" ng-disabled="!grillForm.$valid">Guardar</button>
                     </div>
                 </div>
                 <div class="form-group">
