--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -40,7 +40,7 @@
                     <td>{{reception.CarRegistration}}</td>
                     <td>{{reception.ReceivedFromField}}</td>
                     <td>{{reception.Cylinder}}</td>
-                    <td>{{reception.EntryDate}}</td>
+                    <td>{{reception.EntryDate | date:'dd/MM/yyyy HH:mm'}}</td>
                     <td>{{reception.HeatHoursDrying}}</td>
                     <td>{{reception.Grills}}</td>
                     <td ng-hide="IsGrillToReception">
