--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -76,52 +76,54 @@
                                     </div>
                                 </div>
                             </div>
-                            <table id="data-table-command" class="table table-striped table-vmiddle">
-                                <thead>
-                                    <tr>
-                                        <th>Id</th>
-                                        <th>Fecha de Captura</th>
-                                        <th>Recepciones</th>
-                                        <th>Tamaño</th>
-                                        <th>Sacos</th>
-                                        <th>Kilos</th>
-                                        <th>Calidad</th>
-                                        <th>Variedad</th>
-                                        <th>Productor</th>
-                                        <th>Campo</th>
-                                        <th>Peso de la Muestra</th>
-                                        <th>Humedad</th>
-                                        <th>No.Nueces</th>
-                                        <th>Rendimiento</th>
-                                        <th>Total</th>
-                                        <th>Agregar</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr ng-repeat="grill in grills | filter:searchUser">
-                                        <td>{{grill.Id}}</td>
-                                        <td>{{grill.DateCapture}}</td>
-                                        <td>{{grill.Receptions}}</td>
-                                        <td>{{grill.Size}}</td>
-                                        <td>{{grill.Sacks}}</td>
-                                        <td>{{grill.Kilos}}</td>
-                                        <td>{{grill.Quality}}</td>
-                                        <td>{{grill.Variety}}</td>
-                                        <td>{{grill.Producer}}</td>
-                                        <td>{{grill.FieldName}}</td>
-                                        <td>{{grill.Sampling.SampleWeight}}</td>
-                                        <td>{{grill.Sampling.HumidityPercent}}</td>
-                                        <td>{{grill.Sampling.WalnutNumber}}</td>
-                                        <td>{{grill.Sampling.Performance}}</td>
-                                        <td>{{grill.Sampling.TotalWeightOfEdibleNuts}}</td>
-                                        <td>
-                                            <div class="checkbox m-b-15">
-                                                <label><input type="checkbox" ng-model="grill.Added"><i class="input-helper"></i></label>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div class="card-body table-responsive">
+                                <table class="table table-striped table-vmiddle">
+                                    <thead>
+                                        <tr>
+                                            <th>Id</th>
+                                            <th>Fecha de Captura</th>
+                                            <th>Recepciones</th>
+                                            <th>Tamaño</th>
+                                            <th>Sacos</th>
+                                            <th>Kilos</th>
+                                            <th>Calidad</th>
+                                            <th>Variedad</th>
+                                            <th>Productor</th>
+                                            <th>Campo</th>
+                                            <th>Peso de la Muestra</th>
+                                            <th>Humedad</th>
+                                            <th>No.Nueces</th>
+                                            <th>Rendimiento</th>
+                                            <th>Total</th>
+                                            <th>Agregar</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="grill in grills | filter:searchUser">
+                                            <td>{{grill.Id}}</td>
+                                            <td>{{grill.DateCapture}}</td>
+                                            <td>{{grill.Receptions}}</td>
+                                            <td>{{grill.Size}}</td>
+                                            <td>{{grill.Sacks}}</td>
+                                            <td>{{grill.Kilos}}</td>
+                                            <td>{{grill.Quality}}</td>
+                                            <td>{{grill.Variety}}</td>
+                                            <td>{{grill.Producer}}</td>
+                                            <td>{{grill.FieldName}}</td>
+                                            <td>{{grill.Sampling.SampleWeight}}</td>
+                                            <td>{{grill.Sampling.HumidityPercent}}</td>
+                                            <td>{{grill.Sampling.WalnutNumber}}</td>
+                                            <td>{{grill.Sampling.Performance}}</td>
+                                            <td>{{grill.Sampling.TotalWeightOfEdibleNuts}}</td>
+                                            <td>
+                                                <div class="checkbox m-b-15">
+                                                    <label><input type="checkbox" ng-model="grill.Added"><i class="input-helper"></i></label>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -147,44 +149,46 @@
                             </div>
                             <div id="{{issue.Id}}" class="collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <table id="data-table-command" class="table table-striped table-vmiddle">
-                                        <thead>
-                                            <th>Id</th>
-                                            <th>Fecha de Captura</th>
-                                            <th>Recepciones</th>
-                                            <th>Tamaño</th>
-                                            <th>Sacos</th>
-                                            <th>Kilos</th>
-                                            <th>Calidad</th>
-                                            <th>Variedad</th>
-                                            <th>Productor</th>
-                                            <th>Campo</th>
-                                            <th>Peso de la Muestra</th>
-                                            <th>Humedad</th>
-                                            <th>No.Nueces</th>
-                                            <th>Rendimiento</th>
-                                            <th>Total</th>
-                                        </thead>
-                                        <tbody>
-                                            <tr ng-repeat="grilli in issue.Grills">
-                                                <td>{{grilli.Id}}</td>
-                                                <td>{{grilli.DateCapture}}</td>
-                                                <td>{{grilli.Receptions}}</td>
-                                                <td>{{grilli.Size}}</td>
-                                                <td>{{grilli.Sacks}}</td>
-                                                <td>{{grilli.Kilos}}</td>
-                                                <td>{{grilli.Quality}}</td>
-                                                <td>{{grilli.Variety}}</td>
-                                                <td>{{grilli.Producer}}</td>
-                                                <td>{{grilli.FieldName}}</td>
-                                                <td>{{grilli.Sampling.SampleWeight}}</td>
-                                                <td>{{grilli.Sampling.HumidityPercent}}</td>
-                                                <td>{{grilli.Sampling.WalnutNumber}}</td>
-                                                <td>{{grilli.Sampling.Performance}}</td>
-                                                <td>{{grilli.Sampling.TotalWeightOfEdibleNuts}}</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                    <div class="card-body table-responsive">
+                                        <table class="table table-striped table-vmiddle">
+                                            <thead>
+                                                <th>Id</th>
+                                                <th>Fecha de Captura</th>
+                                                <th>Recepciones</th>
+                                                <th>Tamaño</th>
+                                                <th>Sacos</th>
+                                                <th>Kilos</th>
+                                                <th>Calidad</th>
+                                                <th>Variedad</th>
+                                                <th>Productor</th>
+                                                <th>Campo</th>
+                                                <th>Peso de la Muestra</th>
+                                                <th>Humedad</th>
+                                                <th>No.Nueces</th>
+                                                <th>Rendimiento</th>
+                                                <th>Total</th>
+                                            </thead>
+                                            <tbody>
+                                                <tr ng-repeat="grilli in issue.Grills">
+                                                    <td>{{grilli.Id}}</td>
+                                                    <td>{{grilli.DateCapture}}</td>
+                                                    <td>{{grilli.Receptions}}</td>
+                                                    <td>{{grilli.Size}}</td>
+                                                    <td>{{grilli.Sacks}}</td>
+                                                    <td>{{grilli.Kilos}}</td>
+                                                    <td>{{grilli.Quality}}</td>
+                                                    <td>{{grilli.Variety}}</td>
+                                                    <td>{{grilli.Producer}}</td>
+                                                    <td>{{grilli.FieldName}}</td>
+                                                    <td>{{grilli.Sampling.SampleWeight}}</td>
+                                                    <td>{{grilli.Sampling.HumidityPercent}}</td>
+                                                    <td>{{grilli.Sampling.WalnutNumber}}</td>
+                                                    <td>{{grilli.Sampling.Performance}}</td>
+                                                    <td>{{grilli.Sampling.TotalWeightOfEdibleNuts}}</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
                                 </div>
                             </div>
                         </div>
