--- a/app/views/producersAndVarieties.html
+++ b/app/views/producersAndVarieties.html
@@ -54,35 +54,36 @@
             <div class="card-header">
                 <h2>Productores</h2>
             </div>
-            <div class="col-sm-12 actionbar">
-                <div class="form-group">
-                    <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                    <div class="col-sm-12">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchProducer">
+            <div class="card-body table-responsive">
+                <div class="col-sm-12 actionbar">
+                    <div class="form-group">
+                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                        <div class="col-sm-12">
+                            <div class="fg-line">
+                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchProducer">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <table id="data-table-command" class="table table-striped table-vmiddle">
-                <thead>
-                    <tr>
-                        <th data-column-id="id">Nombre</th>
-                        <th data-column-id="commands">Opciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="producer in producers | filter:searchProducer">
-                        <td>{{producer.ProducerName}}</td>
-                        <td>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(producer.Id)">
+                <table class="table table-striped table-vmiddle">
+                    <thead>
+                        <tr>
+                            <th data-column-id="id">Nombre</th>
+                            <th data-column-id="commands">Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="producer in producers | filter:searchProducer">
+                            <td>{{producer.ProducerName}}</td>
+                            <td>
+                                <button class="btn btn-icon command-delete" ng-click="confirmationDelete(producer.Id)">
                         <span class="md md-delete"></span>
                     </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <div class="col-sm-6">
@@ -90,7 +91,8 @@
             <div class="card-header">
                 <h2>Variedades</h2>
             </div>
-            <div class="col-sm-12 actionbar">
+            <div class="card-body table-responsive">
+                            <div class="col-sm-12 actionbar">
                 <div class="form-group">
                     <label for="isearch" class="col-sm-2 control-label">Buscar</label>
                     <div class="col-sm-12">
@@ -100,8 +102,7 @@
                     </div>
                 </div>
             </div>
-
-            <table id="data-table-command" class="table table-striped table-vmiddle">
+            <table class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
                         <th data-column-id="id">Nombre</th>
@@ -119,6 +120,7 @@
                     </tr>
                 </tbody>
             </table>
+            </div>
         </div>
     </div>
 </div>
