--- a/app/views/remission/remissionManage.html
+++ b/app/views/remission/remissionManage.html
@@ -3,56 +3,58 @@
         <div class="card-header">
             <h2>Remisiones</h2>
         </div>
-        <div class="col-sm-12 actionbar">
-            <div class="form-group">
-                <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                <div class="col-sm-12">
-                    <div class="fg-line">
-                        <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchUser">
+        <div class="card-body table-responsive">
+            <div class="col-sm-12 actionbar">
+                <div class="form-group">
+                    <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                    <div class="col-sm-12">
+                        <div class="fg-line">
+                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchUser">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <table id="data-table-command" class="table table-striped table-vmiddle">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Fecha</th>
-                    <th>Campo</th>
-                    <th>Cultivo</th>
-                    <th>Variedad</th>
-                    <th>Huerta/Lote</th>
-                    <th>Cantidad</th>
-                    <th>Mayordomo</th>
-                    <th>Transporte No.</th>
-                    <th>Conductor</th>
-                    <th>Elaboro</th>
-                    <th>Opciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="remission in remissions | filter:searchUser">
-                    <td>{{remission.Id}}</td>
-                    <td>{{remission.DateCapture}}</td>
-                    <td>{{remission.FieldName}}</td>
-                    <td>{{remission.Cultivation}}</td>
-                    <td>{{remission.Variety}}</td>
-                    <td>{{remission.Batch}}</td>
-                    <td>{{remission.Quantity}}</td>
-                    <td>{{remission.Butler}}</td>
-                    <td>{{remission.TransportNumber}}</td>
-                    <td>{{remission.Driver}}</td>
-                    <td>{{remission.Elaborate}}</td>
-                    <td>
-                        <button class="btn btn-icon command-edit" ng-click="redirectUpdate(remission)">
+            <table class="table table-striped table-vmiddle">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Fecha</th>
+                        <th>Campo</th>
+                        <th>Cultivo</th>
+                        <th>Variedad</th>
+                        <th>Huerta/Lote</th>
+                        <th>Cantidad</th>
+                        <th>Mayordomo</th>
+                        <th>Transporte No.</th>
+                        <th>Conductor</th>
+                        <th>Elaboro</th>
+                        <th>Opciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="remission in remissions | filter:searchUser">
+                        <td>{{remission.Id}}</td>
+                        <td>{{remission.DateCapture}}</td>
+                        <td>{{remission.FieldName}}</td>
+                        <td>{{remission.Cultivation}}</td>
+                        <td>{{remission.Variety}}</td>
+                        <td>{{remission.Batch}}</td>
+                        <td>{{remission.Quantity}}</td>
+                        <td>{{remission.Butler}}</td>
+                        <td>{{remission.TransportNumber}}</td>
+                        <td>{{remission.Driver}}</td>
+                        <td>{{remission.Elaborate}}</td>
+                        <td>
+                            <button class="btn btn-icon command-edit" ng-click="redirectUpdate(remission)">
                         <span class="md md-edit"></span>
                     </button>
-                        <button class="btn btn-icon command-delete" ng-click="confirmationDelete(remission.Id)">
+                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(remission.Id)">
                         <span class="md md-delete"></span>
                     </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
