--- a/app/views/sampling/samplingGrillManage.html
+++ b/app/views/sampling/samplingGrillManage.html
@@ -13,38 +13,40 @@
                 </div>
             </div>
         </div>
-        <table id="data-table-command" class="table table-striped table-vmiddle">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Fecha</th>
-                    <th>Peso</th>
-                    <th>Porciento de Humedad</th>
-                    <th>Número de nueces</th>
-                    <th>Rendimiento</th>
-                    <th>Peso total de nueces Comestibles</th>
-                    <th>Opciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="sampling in samplings | filter:searchUser">
-                    <td>{{sampling.Id}}</td>
-                    <td>{{sampling.DateCapture}}</td>
-                    <td>{{sampling.SampleWeight}}</td>
-                    <td>{{sampling.HumidityPercent}}</td>
-                    <td>{{sampling.WalnutNumber}}</td>
-                    <td>{{sampling.Performance}}</td>
-                    <td>{{sampling.TotalWeightOfEdibleNuts}}</td>
-                    <td>
-                        <button class="btn btn-icon command-edit" ng-click="redirectUpdate(sampling)">
+        <div class="card-body table-responsive">
+            <table id="data-table-command" class="table table-striped table-vmiddle">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Fecha</th>
+                        <th>Peso</th>
+                        <th>Porciento de Humedad</th>
+                        <th>Número de nueces</th>
+                        <th>Rendimiento</th>
+                        <th>Peso total de nueces Comestibles</th>
+                        <th>Opciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="sampling in samplings | filter:searchUser">
+                        <td>{{sampling.Id}}</td>
+                        <td>{{sampling.DateCapture}}</td>
+                        <td>{{sampling.SampleWeight}}</td>
+                        <td>{{sampling.HumidityPercent}}</td>
+                        <td>{{sampling.WalnutNumber}}</td>
+                        <td>{{sampling.Performance}}</td>
+                        <td>{{sampling.TotalWeightOfEdibleNuts}}</td>
+                        <td>
+                            <button class="btn btn-icon command-edit" ng-click="redirectUpdate(sampling)">
                         <span class="md md-edit"></span>
                     </button>
-                        <button class="btn btn-icon command-delete" ng-click="confirmationDelete(sampling.Id)">
+                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(sampling.Id)">
                         <span class="md md-delete"></span>
                     </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
