--- a/app/views/sampling/samplingGrillManage.html
+++ b/app/views/sampling/samplingGrillManage.html
@@ -3,18 +3,18 @@
         <div class="card-header">
             <h2>Muestreos (Parrillas)</h2>
         </div>
-        <div class="col-sm-12 actionbar">
-            <div class="form-group">
-                <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                <div class="col-sm-12">
-                    <div class="fg-line">
-                        <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchUser">
+        <div class="card-body table-responsive">
+            <div class="col-sm-12 actionbar">
+                <div class="form-group">
+                    <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                    <div class="col-sm-12">
+                        <div class="fg-line">
+                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchGrillSampling">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="card-body table-responsive">
-            <table id="data-table-command" class="table table-striped table-vmiddle">
+            <table class="table table-striped table-vmiddle">
                 <thead>
                     <tr>
                         <th>Id</th>
@@ -28,7 +28,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="sampling in samplings | filter:searchUser">
+                    <tr ng-repeat="sampling in samplings | filter:searchGrillSampling">
                         <td>{{sampling.Id}}</td>
                         <td>{{sampling.DateCapture}}</td>
                         <td>{{sampling.SampleWeight}}</td>
