--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -47,9 +47,8 @@
                 <div class="form-group">
                     <label for="quality" class="col-sm-2 control-label">Calidad</label>
                     <div class="col-sm-10">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="quality" name="Quality" placeholder="calidad" data-ng-model="grill.Quality">
-                            <small class="help-block has-error" style="color:red" ng-show="!grillForm.$pristine && grillForm.Quality.$error.required">El Campo es requerido.</small>
+                        <div class="fg-line select">
+                            <select class="form-control" ng-init="grill.Quality = qualities[0]" ng-model="grill.Quality" ng-options="quality.Name for quality in qualities"></select>
                         </div>
                     </div>
                 </div>
