--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -1,54 +1,59 @@
-
-
-    <table datatable="" dt-options="dtOptions"  class="table table-striped table-bordered">
-    <thead>
-    <tr>
-        <th>Fecha</th>
-        <th>Variedad</th>
-        <th>Remisión</th>
-        <th>Cilindro</th>
-        <th>Folio</th>
-        <th>Kgs. Origen</th>
-        <th>Fecha de Proceso</th>
-        <th>Sacos</th>
-        <th>Kilogramos</th>
-        <th>Sacos Segunda</th>
-        <th>Kilogramos</th>
-        <th>Total</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>10/05/2016</td>
-        <td>wichita</td>
-        <td>1234453</td>
-        <td>20B</td>
-        <td>956 y 957</td>
-        <td>24000</td>
-        <td>11/05/2016</td>
-        <td>246</td>
-        <td>6150</td>
-        <td>82</td>
-        <td>1886</td>
-        <td>8036</td>
-    </tr>
-    <tr>
-        <td>10/05/2016</td>
-        <td>wichita</td>
-        <td>1234453</td>
-        <td>20A</td>
-        <td>958 y 959</td>
-        <td>24000</td>
-        <td>11/05/2016</td>
-        <td>105</td>
-        <td>2625</td>
-        <td>11</td>
-        <td>253</td>
-        <td>2878</td>
-    </tr>
-    
-    </tbody>
-</table>
-
-
-
+<div class="animated bounceInRight">
+    <div class="card">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Reporte (Productor)</h2>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <div class="fg-line select">
+                                <select id="prodF" class="form-control" ng-model="producer" ng-options="producer.ProducerName for producer in producers"
+                                    ng-change="getProducerReport(producer.Id)"></select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-body table-responsive">
+            <table datatable="ng" dt-options="dtOptions" class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Variedad</th>
+                        <th>Campo</th>
+                        <th>Remisión</th>
+                        <th>Cilindro</th>
+                        <th>Folio</th>
+                        <th>Kgs. Origen</th>
+                        <th>Fecha de Proceso</th>
+                        <th>Sacos</th>
+                        <th>Kilogramos</th>
+                        <th>Sacos Segunda</th>
+                        <th>Kilogramos</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="report in producerReport">
+                        <td>{{report.DateReceptionCapture | date:'dd/MM/yyyy HH:mm'}}</td>
+                        <td>{{report.Variety}}</td>
+                        <td>{{report.FieldName}}</td>
+                        <td></td>
+                        <td>{{report.Cylinder}}</td>
+                        <td>{{report.Folio}}</td>
+                        <td>{{report.KgsOrigen}}</td>
+                        <td>{{report.ProcessDate}}</td>
+                        <td>{{report.SacksP}}</td>
+                        <td>{{report.KilosFirst}}</td>
+                        <td>{{report.SacksS}}</td>
+                        <td>{{report.KilosSecond}}</td>
+                        <td>{{report.KilosTotal}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
