se agregaron los reportes de parrillas se reestructuro el controlador de reportes

--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -110,11 +110,11 @@
                                             <td>{{grill.Variety}}</td>
                                             <td>{{grill.Producer}}</td>
                                             <td>{{grill.FieldName}}</td>
-                                            <td>{{grill.Sampling.SampleWeight}}</td>
-                                            <td>{{grill.Sampling.HumidityPercent}}</td>
-                                            <td>{{grill.Sampling.WalnutNumber}}</td>
-                                            <td>{{grill.Sampling.Performance}}</td>
-                                            <td>{{grill.Sampling.TotalWeightOfEdibleNuts}}</td>
+                                            <td>{{grill.SampleWeight}}</td>
+                                            <td>{{grill.HumidityPercent}}</td>
+                                            <td>{{grill.WalnutNumber}}</td>
+                                            <td>{{grill.Performance}}</td>
+                                            <td>{{grill.TotalWeightOfEdibleNuts}}</td>
                                             <td>
                                                 <div class="checkbox m-b-15">
                                                     <label><input type="checkbox" ng-model="grill.Added"><i class="input-helper"></i></label>
@@ -180,11 +180,11 @@
                                                     <td>{{grilli.Variety}}</td>
                                                     <td>{{grilli.Producer}}</td>
                                                     <td>{{grilli.FieldName}}</td>
-                                                    <td>{{grilli.Sampling.SampleWeight}}</td>
-                                                    <td>{{grilli.Sampling.HumidityPercent}}</td>
-                                                    <td>{{grilli.Sampling.WalnutNumber}}</td>
-                                                    <td>{{grilli.Sampling.Performance}}</td>
-                                                    <td>{{grilli.Sampling.TotalWeightOfEdibleNuts}}</td>
+                                                    <td>{{grilli.SampleWeight}}</td>
+                                                    <td>{{grilli.HumidityPercent}}</td>
+                                                    <td>{{grilli.WalnutNumber}}</td>
+                                                    <td>{{grilli.Performance}}</td>
+                                                    <td>{{grilli.TotalWeightOfEdibleNuts}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
