Se acambio humedad.

--- a/app/views/humidity/humidityAdd.html
+++ b/app/views/humidity/humidityAdd.html
@@ -32,7 +32,7 @@
                         <td>{{receptionEntry.Variety}}</td>
                         <td>{{receptionEntry.Producer}}</td>
                         <td>
-                            <button class="btn btn-icon command-delete" ng-click="redirectToAddHumidity()">
+                            <button class="btn btn-icon command-delete" ng-click="redirectToAddHumidity(recptionEntry.Id, receptionEntry.Receptions)">
                                 <span class="md md-format-color-reset"></span>
                             </button>
                         </td>
