se agrego autenticacion y restriccion de vistas por roles

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -16033,3 +16033,10 @@ a.thumbnail.active {
 table, th, td{
   text-align: center;
 }
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
+}
