--- a/app/views/accesDenied.html
+++ b/app/views/accesDenied.html
@@ -1,1 +1,10 @@
-<h1>Acceso Denegado!!!!</h1>
+<div class="animated bounceInRight">
+    <div class="card">
+        <div class="jumbotron">
+            <div class="container">
+                <h1>Acceso Denegado!</h1>
+                <p>Usted no tiene permisos para acceder a esta vista.</p>
+            </div>
+        </div>
+    </div>
+</div>
