--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -39,7 +39,7 @@
                 <tbody>
                     <tr ng-repeat="grill in grills | filter:searchUser">
                         <td>{{grill.Id}}</td>
-                        <td>{{grill.DateCapture}}</td>
+                        <td>{{grill.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{grill.Receptions}}</td>
                         <td>{{grill.Size}}</td>
                         <td>{{grill.Sacks}}</td>
